--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.1.1",
+    "ethers": "^6.7.1",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "~1.12.2",
-    "wagmi": "~1.4.2"
+    "wagmi": "^1.4.3"
   },
   "devDependencies": {
-    "@types/node": "^18.16.12",
+    "@types/node": "^18.18.4",
     "@types/react": "^18.2.21",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   }
 }
